test/constrained-generics/basic/withdecl/withdecl-union-notinterface.good
withdecl-union-notinterface.chpl:5: error: unions cannot inherit
